--- a/src/my-app.html
+++ b/src/my-app.html
@@ -77,6 +77,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="utils/pretty-number.html">
 <link rel="import" href="utils/long-hash.html">
 <link rel="import" href="utils/notification-panel.html">
+<link rel="import" href="utils/key-value-panel.html">
 <link rel="lazy-import" href="page-markets.html">
 <link rel="lazy-import" href="page-market.html">
 <link rel="lazy-import" href="page-rings.html">
