--- a/src/looper-page/looper-footer.html
+++ b/src/looper-page/looper-footer.html
@@ -8,6 +8,7 @@
       background-color: var(--google-grey-300);
       width: 100%;
       color: rgba(0, 0, 0, .54);
+      font-size: 14px;
     }
 
     .social,
