--- a/src/wallet/subpage-default.html
+++ b/src/wallet/subpage-default.html
@@ -32,6 +32,10 @@
     .card-actions paper-button:hover {
       color: var(--google-blue-700);
     }
+
+    .sections > paper-card {
+      padding: 0;
+    }
     </style>
     <div class="sections">
       <paper-card heading="Generate New Wallet">
