--- a/src/wallet/subpage-generate.html
+++ b/src/wallet/subpage-generate.html
@@ -61,6 +61,10 @@
       color: var(--google-blue-700);
       padding-right: 8px;
     }
+
+    .sections>paper-card {
+      padding: 0;
+    }
     </style>
     <div class="sections">
       <paper-card heading="Generate Ethereum Walelt">
