--- a/src/wallet/subpage-unlock.html
+++ b/src/wallet/subpage-unlock.html
@@ -56,6 +56,10 @@
       padding-right: 8px;
     }
 
+    .sections>paper-card {
+      padding: 0;
+    }
+
     #fileInput {
       visibility: hidden;
     }
@@ -80,7 +84,6 @@
         </div>
         <div class="card-warning center">
           <div>
-
           </div>
         </div>
         <div class="card-actions">
