--- a/src/wallet/subpage-default.html
+++ b/src/wallet/subpage-default.html
@@ -38,7 +38,7 @@
     }
     </style>
     <div class="sections">
-      <paper-card heading="Generate New Wallet">
+      <paper-card nopadding heading="Generate New Wallet">
         <div class="card-content">Looper gives you the ability to generate new wallets so you can store your ETH & Tokens yourself, not on an exchange. This process happens entirely in your browser. Looper is not a web wallet. We are a client-side interface that allows you to interact with the Ethereum blockchain. We never save, store, or transmit any sensitive information ever. Therefore, when you generate a new wallet, you are responsible for safely backing it up.</div>
         <div class="card-actions">
           <paper-button on-click="generateClicked">Generate Ethereum Wallet</paper-button>
@@ -49,7 +49,7 @@
           <div class="flex or">or</div>
         </div>
       </paper-card>
-      <paper-card heading="Unlock Existing Wallet">
+      <paper-card nopadding heading="Unlock Existing Wallet">
         <div class="card-content">Some content</div>
         <div class="card-actions">
           <paper-button on-click="unlockClicked">Unlock Keystore File (UTC / JSON)</paper-button>
