--- a/src/wallet/subpage-generate.html
+++ b/src/wallet/subpage-generate.html
@@ -62,12 +62,9 @@
       padding-right: 8px;
     }
 
-    .sections>paper-card {
-      padding: 0;
-    }
     </style>
     <div class="sections">
-      <paper-card heading="Generate Ethereum Walelt">
+      <paper-card nopadding heading="Generate Ethereum Walelt">
         <div class="card-content">
           <div class="vertical center layout ">
             <div secondary-text> Provide a very strong password:</div>
@@ -91,7 +88,7 @@
           <!-- <div class="flex"></div> -->
         </div>
       </paper-card>
-      <paper-card heading="Save Keystore File" style$="visibility:{{unlock}}">
+      <paper-card nopadding heading="Save Keystore File" style$="visibility:{{unlock}}">
         <div class="card-content">
           <div class="vertical center layout ">
             <div class="vertical layout warning" secondary-text>
