--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -45,14 +45,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       font-size: 14px;
     }
 
-    .sections > paper-card {
+    .sections>paper-card {
       width: 100%;
       margin-bottom: 32px;
       padding: 32px 16px;
     }
 
+    .sections>paper-card[nopadding] {
+      padding: 0;
+    }
 
-    .sections > paper-card[transparent] {
+
+
+    .sections>paper-card[transparent] {
       color: rgba(0, 0, 0, .54);
       text-transform: uppercase;
       text-align: left;
