--- a/src/page-order.html
+++ b/src/page-order.html
@@ -14,74 +14,95 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <dom-module id="page-order">
   <template>
     <style include="shared-styles">
-      :host {
-        display: block;
-      }
+     :host {
+      display: block;
+    }
 
-      .line {
-        @apply(--layout-horizontal);
-        @apply(--layout-end-justified);
-      }
+    .line {
+      @apply(--layout-horizontal);
+      @apply(--layout-end-justified);
+    }
 
-      .summary{
-        @apply(--layout-vertical);
-        @apply(--layout-center-justified);
-      }
+    .summary {
+      @apply(--layout-vertical);
+      @apply(--layout-center-justified);
+    }
 
-      .summary .line{
-        @apply(--layout-horizontal);
-        @apply(--layout-center-justified);
-        text-align: right;
-        font-size: 14px;
-        color: rgba(0, 0, 0, 0.78);
-        border: none;
-        padding-top: 16px;
-        height: 100%;
-        line-height: 32px;
-      }
+    .summary .line {
+      @apply(--layout-horizontal);
+      @apply(--layout-center-justified);
+      text-align: right;
+      font-size: 14px;
+      color: rgba(0, 0, 0, 0.78);
+      border: none;
+      padding-top: 16px;
+      height: 100%;
+      line-height: 32px;
+    }
 
-      .summary .line .title {
-        width: 100px;
-        font-weight: 500;
-      }
+    .summary .line .title {
+      width: 100px;
+      font-weight: 500;
+    }
 
-      .summary .line .column1 {
-         width: 100px;
-      }
-      .summary .line .column2 {
-        width: 100px;
-      }
-      .summary .line .column3 {
-        width: 100px;
-      }
+    .summary .line .column1 {
+      width: 100px;
+    }
 
+    .summary .line .column2 {
+      width: 100px;
+    }
+
+    .summary .line .column3 {
+      width: 100px;
+    }
     </style>
+    <iron-ajax auto url="https://raw.githubusercontent.com/Loopring/mock-relay-data/master/order.json" handle-as="json" last-response="{{order}}" debounce-duration="300">
+    </iron-ajax>
     <looper-page>
       <simple-toolbar slot="secondary-toolbar" title="Order" id="[[id]]" back-link="#/orders"></simple-toolbar>
       <global-variable key="app-config" value="{{appConfig}}"></global-variable>
       <div class="sections">
-        <div style="padding-top: 10px; padding-top: 10px;">Order</div>
-        <paper-card>
-          <recent-orders filter-mine name="myorders"></recent-orders>
-        </paper-card>
-
-        <iron-ajax
-                auto
-                url="https://raw.githubusercontent.com/Loopring/mock-relay-data/master/order.json"
-                handle-as="json"
-                last-response="{{order}}"
-                debounce-duration="300">
-        </iron-ajax>
-
-        <div style="padding-top: 10px;">Summary</div>
+        <paper-card transparent>Order Detail</paper-card>
         [[_fillInArray(order)]]
-        <key-value-panel datas="{{keyValueArray}}"></key-value-panel>
-
-        <div style="padding-top: 10px;">Fills</div>
+        <paper-card>
+         <div class="horizontal layout">
+            <div class="vertical layout flex">
+              <paper-item class="flex">
+                <paper-item-body two-line>
+                  <div class="title"> Miner</div>
+                  <div secondary><a target="_blank" href="https://etherscan.io/address/0x8888f1f195afa192cfee860698584c030f4c9db1 ">0x8888f1f195afa192cfee860698584c030f4c9db1 </a></div>
+                </paper-item-body>
+              </paper-item>
+              <paper-item class="flex">
+                <paper-item-body two-line>
+                  <div class="title "> Fee Recepient</div>
+                  <div secondary><a target="_blank" href="https://etherscan.io/address/0x8888f1f195afa192cfee860698584c030f4c9db1 "> 0x8888f1f195afa192cfee860698584c030f4c9db1</a></div>
+                </paper-item-body>
+              </paper-item>
+            </div>
+            <div class="vertical layout flex">
+              <paper-item class="flex">
+                <paper-item-body two-line>
+                  <div class="title "> Transaction Hash</div>
+                  <div secondary><a target="_blank" href="https://etherscan.io/tx/0x1394052c8bee23dedd103fe7d5dbb3dc3f6fd519c5f60215e20ea5eb3da327d0 ">0x8862c0b0886d019bad1fc00581c79b187121e4aee62de4b7b074422db4b6a555</a>
+                  </div>
+                </paper-item-body>
+              </paper-item>
+              <paper-item class="flex">
+                <paper-item-body two-line>
+                  <div class="title "> BlockNum</div>
+                  <div secondary><a target="_blank" href="https://etherscan.io/block/[[tranHextoNum( '0x42afe2')]] ">
+                                        [[tranHextoNum('0x42afe2')]]</a></div>
+                </paper-item-body>
+              </paper-item>
+            </div>
+          </div>
+        </paper-card>
+        <paper-card transparent>Historial Fills</paper-card>
         <paper-card>
           <recent-fills filter-mine name="myfills"></recent-fills>
         </paper-card>
-
         <div class="footer-spacer"></div>
         <looper-footer></looper-footer>
       </div>
@@ -98,42 +119,42 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         keyValueArray: Array
       };
     }
-    ready(){
-        super.ready();
-        console.log("order:"+this.id)
+    ready() {
+      super.ready();
+      console.log("order:" + this.id)
     }
-    _fillInArray(data){
-        if(!data) return [];
-        let array = new Array();
-        array.push({"Original Sell Amount": data.result.orginalOrder.amountS+"("+this._formatValue(data.result.orginalOrder.tokenS)+")"})
-        array.push({"Original Buy Amount": data.result.orginalOrder.amountB+"("+this._formatValue(data.result.orginalOrder.tokenB)+")"})
-        array.push({"Filled Sell Amount": data.result.totalDealedAmountS+"("+this._formatValue(data.result.orginalOrder.tokenS)+")"})
-        array.push({"Filled Buy Amount": data.result.totalDealedAmountB+"("+this._formatValue(data.result.orginalOrder.tokenB)+")"})
-        array.push({"Status": data.result.status})
-        this.keyValueArray = array
+    _fillInArray(data) {
+      if (!data) return [];
+      let array = new Array();
+      array.push({ "Original Sell Amount": data.result.orginalOrder.amountS + "(" + this._formatValue(data.result.orginalOrder.tokenS) + ")" })
+      array.push({ "Original Buy Amount": data.result.orginalOrder.amountB + "(" + this._formatValue(data.result.orginalOrder.tokenB) + ")" })
+      array.push({ "Filled Sell Amount": data.result.totalDealedAmountS + "(" + this._formatValue(data.result.orginalOrder.tokenS) + ")" })
+      array.push({ "Filled Buy Amount": data.result.totalDealedAmountB + "(" + this._formatValue(data.result.orginalOrder.tokenB) + ")" })
+      array.push({ "Status": data.result.status })
+      this.keyValueArray = array
     }
-    _findTokenConfig(address){
+    _findTokenConfig(address) {
       var tokens = this.appConfig.tokens;
-      for (var x in tokens){
+      for (var x in tokens) {
         var token = tokens[x];
-          if(token.contract == address){
-            return token;
+        if (token.contract == address) {
+          return token;
         }
       }
     }
-    _formatValue(address){
-        if(!address) return;
-        let token = this._findTokenConfig(address)
-        if(!token) return "?";
-        return token.unit
+    _formatValue(address) {
+      if (!address) return;
+      let token = this._findTokenConfig(address)
+      if (!token) return "?";
+      return token.unit
     }
-    _number(value){
-        if(!value) return 0
-        return new Number(value)
+    _number(value) {
+      if (!value) return 0
+      return new Number(value)
     }
-    _above0(value){
-        if(!value) return false
-        return this._number(value) > 0
+    _above0(value) {
+      if (!value) return false
+      return this._number(value) > 0
     }
   }
 
