--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -55,8 +55,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       padding: 0;
     }
 
-
-
     .sections>paper-card[transparent] {
       color: rgba(0, 0, 0, .54);
       text-transform: uppercase;
@@ -70,6 +68,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     .footer-spacer {
       @apply --layout-flex;
       min-height: 48px;
+    }
+
+    app-toolbar {
+      font-size: 16px;
     }
 
     iron-input input {
@@ -120,6 +122,25 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     paper-button {
       text-transform: none;
       border-radius: 0;
+    }
+
+    paper-item {
+      padding-top: 8px;
+      padding-bottom: 8px;
+    }
+
+    paper-item:hover {
+      background-color: var(--paper-grey-100);
+    }
+
+    paper-item a {
+      text-decoration: none
+    }
+
+    paper-item div.title {
+      /*font-size: 1em;*/
+      font-weight: 500;
+      color: rgba(0, 0, 0, .54);
     }
 
     vaadin-grid {
