--- a/src/utils/key-value-panel.html
+++ b/src/utils/key-value-panel.html
@@ -45,69 +45,66 @@
     </div>
   </div>
 -->
-
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <dom-module id="key-value-panel">
   <template>
     <style include="shared-styles">
-      :host {
-        display: inline-block;
-      }
-      paper-card {
-        width: 1024px;
-      }
-      paper-card .item{
-        @apply(--layout-horizontal);
-        @apply(--layout-start-justified);
-        text-align: left;
-        font-size: 14px;
-        color: rgba(0, 0, 0, 0.78);
-        padding-top: 16px;
-        height: 100%;
-        line-height: 32px;
-      }
-      paper-card .item .key {
-        @apply(--layout-horizontal);
-        @apply(--layout-end-justified);
-        width:50%;
-        padding-right: 10px;
-        font-weight: 500;
-      }
-      paper-card .item .value {
-        @apply(--layout-horizontal);
-        @apply(--layout-start-justified);
-        width:50%;
-        padding-left: 10px;
-      }
-      paper-card .item .array{
-        @apply(--layout-vertical);
-        @apply(--layout-start-justified);
-        width:50%;
-        padding-left: 10px;
-      }
-    </style>
-    <paper-card>
-      <template is="dom-repeat" items="[[datas]]" as="item">
-        <div class="item">
-          <template is="dom-repeat" items="[[_toArray(item)]]" as="value" index-as="key">
-            <div class='key'>[[value.name]]</div>
-            <template is="dom-if" if="{{_isString(value.value)}}">
-              <div class='value'>[[value.value]]</div>
-            </template>
-            <template is="dom-if" if="{{_isArray(value.value)}}">
-              <div class='array'>
-                <ul>
-                  <template is="dom-repeat" items="[[value.value]]" as="valueItem">
-                    <li>[[valueItem]]</li>
-                  </template>
-                </ul>
-              </div>
-            </template>
-          </template>
-        </div>
-      </template>
-    </paper-card>
+     :host {
+      display: inline-block;
+    }
 
+    .item {
+      @apply(--layout-horizontal);
+      @apply(--layout-start-justified);
+      text-align: left;
+      font-size: 14px;
+      color: rgba(0, 0, 0, 0.78);
+      padding-top: 16px;
+      height: 100%;
+      line-height: 32px;
+    }
+
+    .item .key {
+      @apply(--layout-horizontal);
+      @apply(--layout-end-justified);
+      width: 50%;
+      padding-right: 10px;
+      font-weight: 500;
+    }
+
+    .item .value {
+      @apply(--layout-horizontal);
+      @apply(--layout-start-justified);
+      width: 50%;
+      padding-left: 10px;
+    }
+
+    .item .array {
+      @apply(--layout-vertical);
+      @apply(--layout-start-justified);
+      width: 50%;
+      padding-left: 10px;
+    }
+    </style>
+    <template is="dom-repeat" items="[[datas]]" as="item">
+      <div class="item">
+        <template is="dom-repeat" items="[[_toArray(item)]]" as="value" index-as="key">
+          <div class='key'>[[value.name]]</div>
+          <template is="dom-if" if="{{_isString(value.value)}}">
+            <div class='value'>[[value.value]]</div>
+          </template>
+          <template is="dom-if" if="{{_isArray(value.value)}}">
+            <div class='array'>
+              <ul>
+                <template is="dom-repeat" items="[[value.value]]" as="valueItem">
+                  <li>[[valueItem]]</li>
+                </template>
+              </ul>
+            </div>
+          </template>
+        </template>
+      </div>
+    </template>
   </template>
   <script>
   class KeyValuePanel extends Polymer.Element {
@@ -122,21 +119,21 @@
       };
     }
 
-    _isString(obj){
-        return typeof(obj) === "string"
+    _isString(obj) {
+      return typeof(obj) === "string"
     }
 
-    _isArray(obj){
-        return Array.isArray(obj)
+    _isArray(obj) {
+      return Array.isArray(obj)
     }
 
     _toArray(obj) {
-       return Object.keys(obj).map(function(key) {
-          return {
-             name: key,
-             value: obj[key]
-          };
-       });
+      return Object.keys(obj).map(function(key) {
+        return {
+          name: key,
+          value: obj[key]
+        };
+      });
     }
   }
 
