--- a/src/looper-page/looper-footer.html
+++ b/src/looper-page/looper-footer.html
@@ -7,7 +7,7 @@
       display: block;
       background-color: var(--google-grey-300);
       width: 100%;
-      color: rgba(0, 0, 0, .54);
+      color: var(--app-text-color-light)
       font-size: 14px;
     }
 
@@ -18,11 +18,11 @@
 
     .social a {
       padding: 0 8px 0 8px;
-      color: rgba(0,0,0,.78);
+      color: var(--app-text-color);
     }
 
     .social a:hover {
-      color: var(--google-blue-500);
+      color: var(--app-primary-color);
     }
 
     .social {
@@ -42,15 +42,15 @@
 
     .menus a {
       text-decoration: none;
-      color: rgba(0, 0, 0, .54);
+      color: var(--app-text-color-light)
     }
 
     .menus a:hover {
-      color: var(--google-blue-500);
+      color: var(--app-primary-color);
     }
 
     .copyright {
-      color: rgba(0, 0, 0, .54);
+      color: var(--app-text-color-light)
       padding-bottom: 0;
       font-size: 12px;
     }
