--- a/src/looper-page/looper-notification-bar.html
+++ b/src/looper-page/looper-notification-bar.html
@@ -32,7 +32,7 @@
       }
 
       app-toolbar.notice {
-        background-color: rgba(0, 0, 0, .78);
+        background-color: var(--app-text-color);
       }
 
       app-toolbar.warning {
@@ -40,7 +40,7 @@
       }
 
       app-toolbar.error {
-        background-color: var(--paper-red-500);
+        background-color: var(--app-red-color);
       }
 
       app-toolbar.visible {
