--- a/src/looper-page/looper-toolbar.html
+++ b/src/looper-page/looper-toolbar.html
@@ -12,7 +12,7 @@
 
     app-toolbar {
       color: #fff;
-      background-color: var(--google-blue-500);
+      background-color: var(--app-primary-color);
     }
 
     app-toolbar[active="settings"] {
@@ -20,7 +20,7 @@
     }
 
     a[active]>paper-button {
-      background-color: var(--google-blue-700);
+      background-color: var(--app-primary-color-dark);
     }
 
     </style>
