--- a/src/looper-page/signtosend-dialog.html
+++ b/src/looper-page/signtosend-dialog.html
@@ -24,12 +24,12 @@
     }
 
     .signed.wrapper {
-      background-color: var(--google-blue-700);
-      background-color: var(--google-blue-700);
+      background-color: var(--app-primary-color-dark);
+      background-color: var(--app-primary-color-dark);
     }
 
     .title {
-      color: rgba(0, 0, 0, .54);
+      color: var(--app-text-color-light)
       margin-bottom: 8px;
     }
 
