--- a/src/market/recent-fills.html
+++ b/src/market/recent-fills.html
@@ -63,7 +63,7 @@
             }
             typeStyle(isBuy) {
 
-                return isBuy ? 'var(--paper-green-500)' : 'var(--paper-red-500)';
+                return isBuy ? 'var(--app-green-color)' : 'var(--app-red-color)';
             }
 
             getType(isBuy) {
