--- a/src/page-fill.html
+++ b/src/page-fill.html
@@ -21,7 +21,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         @apply(--layout-start-justified);
         text-align: left;
         font-size: 14px;
-        color: rgba(0, 0, 0, 0.78);
+        color: var(--app-text-color);
         padding-top: 16px;
         height: 100%;
         line-height: 32px;
