--- a/src/page-order.html
+++ b/src/page-order.html
@@ -33,7 +33,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       @apply(--layout-center-justified);
       text-align: right;
       font-size: 14px;
-      color: rgba(0, 0, 0, 0.78);
+      color: var(--app-text-color);
       border: none;
       padding-top: 16px;
       height: 100%;
