--- a/src/utils/notification-panel.html
+++ b/src/utils/notification-panel.html
@@ -28,7 +28,7 @@
     }
 
     paper-toast.info {
-      background-color: var(--google-blue-500);
+      background-color: var(--app-primary-color);
     }
 
     iron-icon {
