--- a/src/wallet/subpage-generate.html
+++ b/src/wallet/subpage-generate.html
@@ -10,7 +10,7 @@
       }
       --paper-card-header-text: {
         font-size: 18px;
-        color: rgba(0, 0, 0, .54);
+        color: var(--app-text-color-light)
       }
     }
 
@@ -36,11 +36,11 @@
     .card-actions paper-button {
       min-width: 360px;
       /*margin:8px 0 8px 0;*/
-      /*color: var(--google-blue-700);*/
+      /*color: var(--app-primary-color-dark);*/
     }
 
     .card-actions paper-button:hover {
-      color: var(--google-blue-700);
+      color: var(--app-primary-color-dark);
     }
 
     .warning iron-icon {
@@ -58,7 +58,7 @@
     }
 
     strong {
-      color: var(--google-blue-700);
+      color: var(--app-primary-color-dark);
       padding-right: 8px;
     }
 
