--- a/src/wallet/subpage-unlock.html
+++ b/src/wallet/subpage-unlock.html
@@ -11,7 +11,7 @@
       }
       --paper-card-header-text: {
         font-size: 18px;
-        color: rgba(0, 0, 0, .54);
+        color: var(--app-text-color-light)
       }
     }
 
@@ -35,11 +35,11 @@
     .card-actions paper-button {
       min-width: 360px;
       /*margin:8px 0 8px 0;*/
-      /*color: var(--google-blue-700);*/
+      /*color: var(--app-primary-color-dark);*/
     }
 
     .card-actions paper-button:hover {
-      color: var(--google-blue-700);
+      color: var(--app-primary-color-dark);
     }
 
     iron-input input {
